[gd_scene load_steps=13 format=3 uid="uid://bkmafd3nllyrv"]

[ext_resource type="Script" path="res://game/actors/characters/generic_characters/bandit_brawler/bandit_brawler.gd" id="1_88jhf"]
[ext_resource type="Script" path="res://game/components/health_system/health_system.gd" id="3_3un4c"]
[ext_resource type="Script" path="res://game/components/movement_system/movement_system.gd" id="4_4trb2"]
[ext_resource type="PackedScene" uid="uid://c4chew2ibe1nn" path="res://game/assets/animations/22_male_long_tunic/anim8/anim8.tscn" id="4_kpkiv"]
[ext_resource type="PackedScene" uid="uid://co6vddaecgqht" path="res://game/assets/animations/22_male_long_tunic/anim5/anim5.tscn" id="5_8bk2n"]
[ext_resource type="Script" path="res://game/actors/characters/generic_characters/opponent_logic/opponent.gd" id="5_i2pqp"]
[ext_resource type="PackedScene" uid="uid://blwrbwq55rga" path="res://game/assets/animations/22_male_long_tunic/anim1/anim1.tscn" id="6_fc03n"]
[ext_resource type="PackedScene" uid="uid://coln0s12vue0t" path="res://game/assets/animations/22_male_long_tunic/anim6/anim6.tscn" id="7_a1qrd"]
[ext_resource type="Script" path="res://game/components/paint_red/paint_red.gd" id="9_ukldj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s8fq7"]
size = Vector3(1, 2.72647, 0.718994)

[sub_resource type="Animation" id="Animation_guw6t"]
resource_name = "ded"
length = 4.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cfmwt"]
_data = {
"ded": SubResource("Animation_guw6t")
}

[node name="bandit_brawler" type="CharacterBody3D" groups=["opponents"]]
script = ExtResource("1_88jhf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.100571, -0.0220947)
shape = SubResource("BoxShape3D_s8fq7")

[node name="idle" parent="." instance=ExtResource("4_kpkiv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40247, 0)

[node name="walk" parent="." instance=ExtResource("5_8bk2n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40247, 0)

[node name="attack" parent="." instance=ExtResource("6_fc03n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40247, 0)

[node name="death" parent="." instance=ExtResource("7_a1qrd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40247, 0)

[node name="queue_free_timer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cfmwt")
}

[node name="health_system" type="Node" parent="."]
script = ExtResource("3_3un4c")

[node name="movement_system" type="Node" parent="."]
script = ExtResource("4_4trb2")
SPEED = 1.0

[node name="is_opponent" type="Node" parent="."]
script = ExtResource("5_i2pqp")

[node name="paint_red" type="Node" parent="."]
script = ExtResource("9_ukldj")
red_material_path = "res://game/actors/characters/generic_characters/bandit_brawler/bandit_brawler_material_red.tres"

[connection signal="health_depleted" from="health_system" to="." method="_on_health_system_health_depleted"]
